@@ -120,6 +120,14 @@ AM_CONDITIONAL(ENABLE_GALAGO, test "$ENABLE_GALAGO" = "yes")
 AC_SUBST(GALAGO_LIBS)
 
 #
+# NUnit required for (optional) unit tests
+#
+PKG_CHECK_MODULES(NUNIT, nunit, HAVE_NUNIT="yes", HAVE_NUNIT="no")
+AM_CONDITIONAL(HAVE_NUNIT, test "$HAVE_NUNIT" = "yes")
+AC_SUBST(NUNIT_LIBS)
+AC_PATH_PROG(NUNIT, nunit-console)
+
+#
 # Properly handle libraries that aren't in our standard GAC path.
 #
 DBUS_PREFIX=`$PKG_CONFIG --variable=prefix dbus-sharp`
@@ -136,5 +144,6 @@ data/images/Makefile
 libtomboy/Makefile
 Tomboy/Makefile
 Tomboy/Plugins/Makefile
+test/Makefile
 po/Makefile.in
 ])
