@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+TestResult.xml
+*.dll
+*.mdb
