@@ -1,3 +1,12 @@
+2006-06-07  Sebastian Rittau  <srittau@jroger.in-berlin.de>
+
+	Added support for NUnit unit tests.
+
+	* configure.in: Check for NUnit. Added test/Makefile.
+	* Makefile.am: Added test to SUBDIRS and a test target.
+	* test/Makefile.am: New file.
+	* test/NoteTest.cs: New file. Currently contains only one dummy test.
+
 2006-02-04  Alex Graveley  <alex@beatniksoftware.com>
 
 	* tomboy.spec.in: Install tomboy.desktop.
